--- a/README.Rmd
+++ b/README.Rmd
@@ -13,16 +13,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Assortment of Slides
+# Slide Dump
 
-Talks, pitches, journal clubs, almost organized.
-
+Talks, pitches, journal club presentations, almost organized. But not really, let's be honest.
 
 ```{r}
 tibble::tribble(
   ~year, ~short, ~desc, ~link,
-  2023, "CooPeR", "fwelnet for survival, again, but... more. And renamed.", "/2023/05-cooper/CooPeR.html",
-  2022, "xai-bench", "XAI-Bench / Journal Club BIPS/LMU", "/2022/imljc-xaibench/index.html",
+  2023, "CooPeR", "fwelnet for survival w/ competing risks, again, but... more. And renamed.", "/2023/05-cooper/CooPeR.html",
+  2022, "aorsf", "ORSF, but A (survival focus group)", "2022/aorsf/aorsf.html",
+  2022, "xai-bench", "XAI-Bench / Journal Club BIPS/SLDS", "/2022/imljc-xaibench/index.html",
   2022, "fwelnet-cr", "fwelnet for survival outcomes with competing risks (idea/pitch)", "/2022/fwelnet-cr/fwelnet-cr.html"
 ) |>
   dplyr::mutate(
