--- a/2023/05-cooper/CooPeR.qmd
+++ b/2023/05-cooper/CooPeR.qmd
@@ -9,7 +9,7 @@ format:
     revealjs:
       reference-location: block
       incremental: true
-      slide-number: "c/t" # flattened slide number / total slides (default)
+      #slide-number: "c/t" # flattened slide number / total slides (default)
       theme: [default, style.scss]
       center: true
       html-math-method: katex
@@ -22,12 +22,14 @@ bibliography: references.bib
 
 ## Motivation
 
-- Setting: High-dimensional survival data w/ competing risks
-    - e.g. time to death from bladder cancer vs. death from other cause
+::: {.nonincremental}
+- Setting: High-dimensional survival data w/ competing risks<br>
+    e.g. time to death from bladder cancer vs. death from other cause
 - Typical approach: 
     - Fit cause-specific model(s) for event(s) of interest
     - Treats other events as  censored
     - → lose (potential) shared information
+:::
 
 . . .
 
@@ -43,7 +45,7 @@ bibliography: references.bib
     - Idea: Some features predictive for event 1 will also be predictive for event 2
 
 
-## Foundation: Elastic Net
+## Foundation: Elastic Net {.nonincremental}
 
 The elastic net objective function with some negative log-likelihood term:
 
@@ -51,16 +53,20 @@ $$
 \underset{\beta}{\operatorname{arg min}} \quad \mathrm{NLL}(\beta) + {\color{blue}\lambda} \sum_{j=1}^p \left( {\color{red}\alpha} |\beta_j| + \frac{1 - {\color{red}\alpha}}{2} \beta^2_j \right)
 $$
 
-::: columns
+::: {.columns} 
 ::: {.column width="50%"}
+::: {.nonincremental}
 -   $\color{blue}{\lambda} \in \mathbb{R}_+$ controls overall penalty
 -   Higher → larger penalty on all $\beta_j$ *equally*
 :::
+:::
 
 ::: {.column width="50%"}
+::: {.nonincremental}
 -   $\color{red}{\alpha} \in [0, 1]$ is the mixing parameter
 -   $1 \Rightarrow$ only $\ell_1$ penalty (LASSO)
 -   $0 \Rightarrow$ only $\ell_2$ penalty (ridge)
+:::
 :::
 :::
 
@@ -89,16 +95,20 @@ $$
 
 ## Feature-Weighted Elastic Net (`fwelnet`)
 
+::: {.nonincremental}
 -   Motivation: Using external information
 -   Adjust penalization weights on individual or groups of features
 -   Assign weights / groups via matrix $\mathbf{Z} \in \mathbb{R}^{p \times K}$
+:::
 
+<!--
 . . .
 
 ### Two Applications
 
 1. Assign features to $K$ groups w/ separate penalization weights
 2. Adjust penalization weights within group
+-->
 
 ::: footer
 [@tay2023featureweightedelastic]
@@ -125,8 +135,10 @@ $$
 :::
 
 ::: {.column width="60%"}
+::: {.nonincremental}
 -   $X_1, X_2$ ➔ group 1
 -   $X_3, X_4, X_5$ ➔ group 2
+:::
 :::
 :::
 
@@ -155,9 +167,11 @@ $$
 :::
 
 ::: {.column width="60%"}
+::: {.nonincremental}
 -   $X_1$: Less important, strong penalization
 -   $X_2, X_3$: More important → weaker penalization
 -   $X_4$: "Irrelevant" → stronger penalization
+:::
 :::
 :::
 
@@ -172,13 +186,14 @@ $$
 \underset{\beta}{\operatorname{arg min}} \quad  \mathrm{NLL}(\beta) + \lambda \sum_{j=1}^p {\color{blue}w_j(\theta)}\left( \alpha |\beta_j| + \frac{1 - \alpha}{2} \beta^2_j \right)
 $$
 
-. . .
 
 $$
 {\color{blue}w_j(\theta)} = \frac{\sum_{l=1}^p \exp(\mathbf{z}_l^T \theta)}{p \exp(\mathbf{z}_j^T \theta)}
 $$
 
--   **Penalization weight** of $\beta_j$ based on corresponding value in $\mathbf{Z}$ and parameter $\theta \in \mathbb{R}^{K \times 1}$
+. . .
+
+**Penalization weight** of $\beta_j$ based on corresponding value in $\mathbf{Z}$ and parameter $\theta \in \mathbb{R}^{K \times 1}$
 
 ::: notes
 - $\mathbf{z}_j$: Row $j$ of $\mathbf{Z}$
@@ -205,18 +220,20 @@ $$
 
 . . .
 
+::: {.nonincremental}
 -   Larger $|\beta_j| \Rightarrow$ weaker penalization for $\hat{\beta}_j$
 -   $|\beta_j| \approx 0 \Rightarrow$ stronger penalization for $\hat{\beta}_j$
+:::
 
 ## Application for Multi-Task Learning {.smaller}
 
--   Authors suggest multi-task learning algorithm: $\mathbf{X}$ and targets $\mathbf{y}_1, \mathbf{y}_2$
+Authors suggest multi-task learning algorithm: $\mathbf{X}$ and targets $\mathbf{y}_1, \mathbf{y}_2$
 
 . . .
 
-1.  Set $\beta_1^{(0)}, \beta_2^{(0)}$ to `glmnet` solution for $(\mathbf{X}, \mathbf{y}_1), (\mathbf{X}, \mathbf{y}_2)$ respectively
+1.  Set $\beta^{(0)}, \beta^{(0)}$ to `glmnet` solution for $(\mathbf{X}, \mathbf{y}_1), (\mathbf{X}, \mathbf{y}_2)$ respectively
 
-2.  For $k = 0, 1, \ldots$:
+2.  For $k = 0, 1, \ldots$ until stopped:
 
     a)  $\mathbf{Z}_2 = \left|\beta_1^{(k)}\right|$. Fit `fwelnet` with $(\mathbf{X}, \mathbf{y}_2, \mathbf{Z}_2)$
         -   Set $\left|\beta_2^{(k+1)}\right|$ to solution with optimal `lambda`
@@ -229,12 +246,14 @@ Side note: $\beta_2^{(0)}$ is never used. Weird.
 
 ## Transfer to Competing Risks
 
--   Setting with two outcomes/event types: $(\mathbf{t}_1, \delta_1), (\mathbf{t}_2, \delta_2)$
+::: {.nonincremental}
+-   Basic idea: Adapt previous algorithm to Cox regression
+-   Setting with two causes/event types: $(\mathbf{t}_1, \delta_1), (\mathbf{t}_2, \delta_2)$
 -   Assumption: Shared information for both causes:
     -   If $X_j$ is important for cause 1, may also be relevant for cause 2
     -   $\Rightarrow$ lower its penalty in cause-specific models
--   Basic idea: Adapt previous algorithm to Cox regression
 -   Multi-task $\simeq$ "Multi-cause"
+:::
 
 . . .
 
@@ -304,26 +323,27 @@ D: Equal w/ multiple
 - Simulation setup borrowed from @binder2009boostinghighdimensional
 - Context: Gene expression data with competing risk target
 - n = 400, p = 5000, organized in 4 main blocks
-    - 250 variables per block w/ true effects
+    - 250 variables per block
     - 4 informative variables per block, 16 total
 - Fit models, use $\mathbf{1}\{\hat{\beta}_j \neq 0\}$ as classification decision
-<!-- - Compare CooPeR, penalized Cox (glmnet), RSF (rsfrc), CoxBoost -->
 
 ## Simulation of True Effects
 
-- Block 1 (**Mutual**): $\rho \approx 0.5$<br>
-    *same effect* (0.5) on both causes
-- Block 2 (**Reversed**): $\rho \approx 0.35$<br>
+- Block 1 (**Mutual**):<br>
+    same effect on both causes
+- Block 2 (**Reversed**): <br>
     positive effect on cause 1 and negative on cause 2
-- Block 3 (**Disjoint**): $\rho \approx 0.05$<br>
+- Block 3 (**Disjoint**):<br>
     3.1: effect on cause 1 only<br>
     3.2: effect on cause 2 only
 
 - Block 4 (**Cor. Noise**): 500 variables, $\rho \approx 0.32$<br>
 - Remaining variables: Uncorrelated noise
 
+
 ::: notes
 Effects of 0.5 on cause-specific hazard function
+ $\rho \approx 0.5$ $\rho \approx 0.35$, $\rho \approx 0.05$
 :::
 
 ## Positive Predictive Value
@@ -341,9 +361,10 @@ knitr::include_graphics("img/selected-ppv-equallambda.png")
 $$\mathrm{PPV} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}}$$
 :::
 
-## Positive Predictive Value
+<!--
 
-<!-- : $\mathrm{PPV} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}}$ -->
+## Positive Predictive Value: Different Prevalences
+
 
 ```{r}
 #| out-width: "85%"
@@ -356,7 +377,8 @@ knitr::include_graphics("img/selected-ppv-difflambda.png")
 $$\mathrm{PPV} = \frac{\mathrm{TP}}{\mathrm{TP} + \mathrm{FP}}$$
 :::
 
-<!---
+-->
+
 ## False Positive Rate
 
 ```{r}
@@ -370,11 +392,12 @@ knitr::include_graphics("img/selected-fpr-equallambda.png")
 $$\mathrm{FPR} = \frac{\mathrm{FP}}{\mathrm{FP} + \mathrm{TN}} = 1 - \mathrm{TNR}$$
 :::
 
--->
+
+<!-- 
 
 ## False Positive Rate
 
-<!-- : $\mathrm{FPR} = \frac{\mathrm{FP}}{\mathrm{FP} + \mathrm{TN}} = 1 - \mathrm{TNR}$ -->
+: $\mathrm{FPR} = \frac{\mathrm{FP}}{\mathrm{FP} + \mathrm{TN}} = 1 - \mathrm{TNR}$ 
 
 ```{r}
 #| out-width: "85%"
@@ -387,35 +410,25 @@ knitr::include_graphics("img/selected-fpr-difflambda.png")
 $$\mathrm{FPR} = \frac{\mathrm{FP}}{\mathrm{FP} + \mathrm{TN}} = 1 - \mathrm{TNR}$$
 :::
 
+-->
 
 ## How about real data?
 
+::: {.nonincremental}
 - Still WIP
 - Idea:
     1. Use algorithms for variable selection
     2. Fit standard cause-specific Cox model using only selected variables
     3. Evaluate prediction performance (tBrier, tAUC)
 - Tried bladder cancer data (@dyrskjot2005molecularsignature), did not go well
+:::
 
+## Open questions
 
-## What's Next
-
-- Would be nice to have a "working" real data example (Maybe TCGA)
-- Finishing the paper for journal submission
-- Talk about this at CEN in September
-
-. . .
-
-### Open questions
-
+::: {.nonincremental}
 - What does the actual optimization problem look like?<br>
     (Does the algorithm converge? To what?)
 - What about $k > 2$ events? No trivial generalization
-
-##
-
-::: {.r-fit-text}
-Thanks for listening!
 :::
 
 ## References
