--- a/2023/06-wimium/beamerthemeBIPS.sty
+++ b/2023/06-wimium/beamerthemeBIPS.sty
@@ -188,6 +188,7 @@
 						 \small and Epidemiology -- BIPS\\[5pt]}
 					\small Achterstraße 30\\[5pt]
 					\small D-28359 Bremen\\[5pt]
+					\small Germany\\[5pt]
 					\small \textcolor{BIPSBlue}{\bips@email}
 			};
 			\node at (10, 2) {\includegraphics[width=0.3\textwidth]{bips-logo.png}};
