--- a/2023/06-wimium/cr.Rmd
+++ b/2023/06-wimium/cr.Rmd
@@ -1,15 +1,15 @@
 ---
-title: "Generating High-Dimensional Competing Risk Survival Settings"
-subtitle: "A thing that I do for reasons"
+title: "Simulating Competing Risk Survival Settings"
+subtitle: "With High-Dimensional Data"
 author: 
   - Lukas Burk
 contactauthor: Lukas Burk
 date: "2023-05-13"
 occasion: "BioWiMium"
-email: burk@leibniz-bips.de
+email: "burk@leibniz-bips.de"
 themeoptions: 
   - fira
-thankstext: Thank you for your attention
+thankstext: "Thank you for your attention"
 output: 
   beamer_presentation: 
     incremental: no
@@ -33,36 +33,39 @@ knitr::opts_chunk$set(
 
 ## Introduction
 
-- Simulation setup part of ongoing project
-- Motivation: Variable selection in high-dimensional settings with competing risks
-- Outcome: 2 competing events, censoring approx. equal prevalence
+Simulation setup part of ongoing project
+
+### Motivation
+
+- Variable selection in high-dimensional settings with competing risks
 - Focus more on high-dimensional setting than sophisticated survival outcome
 
-## Generating Survival Times (I)
+### Outcome
+- 2 competing events, censoring approx. equal prevalence
 
-@binder2009boostinghighdimensional
+## Generating Survival Times (I)
 
 ```{r}
 knitr::include_graphics("img/binder2009.png")
 ```
 
+@binder2009boostinghighdimensional
 
 ## Generating Survival Times (II)
-
-@binder2008adaptingprediction
 
 ```{r}
 knitr::include_graphics("img/binder2007.png")
 ```
 
+@binder2008adaptingprediction
 
 ## Generating Survival Times (III)
-
-@bender2005generatingsurvival
 
 ```{r}
 knitr::include_graphics("img/bender2003.png")
 ```
+
+@bender2005generatingsurvival
 
 ## Predictors: Structure
 
@@ -77,7 +80,6 @@ knitr::include_graphics("img/bender2003.png")
 - Block 4: $\rho \approx 0.32$
 - Rest: $\rho \approx 0$
 
-
 ## Predictors: Generation
 
 - $j = 1, \ldots, p$ and $i = 1, \ldots, N$
@@ -85,54 +87,100 @@ knitr::include_graphics("img/bender2003.png")
 
 $$
 x_{ij} = \begin{cases}
--1 + \epsilon_{ij}                                   & i \leq 0.5n \text{ and } j \leq 0.05p \\
-1 + \epsilon_{ij}                                    & i > 0.5n \text{ and } j \leq 0.05p \\
-1.5 \cdot \mathbf{1}\{u_{i1} < 0.4\} + \epsilon_{ij} & 0.05p < j \leq 0.1p \\
-0.5 \cdot \mathbf{1}\{u_{i2} < 0.7\} + \epsilon_{ij} & 0.1p < j \leq 0.2p \\
-1.5 \cdot \mathbf{1}\{u_{i3} < 0.3\} + \epsilon_{ij} & 0.2p < j \leq 0.3p \\
-\epsilon_{ij}                                        & j > 0.3p
+-1 + \epsilon_{ij}                                   & \text{for}\ i \leq 0.5n \text{ and } j \leq 0.05p \\
+1 + \epsilon_{ij}                                    & \text{for}\ i > 0.5n \text{ and } j \leq 0.05p \\
+1.5 \cdot \mathbf{1}\{u_{i1} < 0.4\} + \epsilon_{ij} & \text{for}\ 0.05p < j \leq 0.1p \\
+0.5 \cdot \mathbf{1}\{u_{i2} < 0.7\} + \epsilon_{ij} & \text{for}\ 0.1p < j \leq 0.2p \\
+1.5 \cdot \mathbf{1}\{u_{i3} < 0.3\} + \epsilon_{ij} & \text{for}\ 0.2p < j \leq 0.3p \\
+\epsilon_{ij}                                        & \text{for}\ j > 0.3p
 \end{cases}
 $$
 
 
 ## Effect Assignment
 
-- Cause-specific hazards with coefficients $\boldsymbol{\beta}_k$
-- $\beta_{jk} = \pm 0.5$ for effect variables
+- Cause-specific hazards for events $k = 1,2$ and coefficients $\pmb{\beta}^{(k)}$
+- $\beta^{(k)}_j = \pm 0.5$ for effect variables
 
-- Block 1 (**Mutual**): 4 variables
-    - same effect on both cause-specific hazards
-- Block 2 (**Reversed**): 4 variables
-    - positive effect on cause 1 and negative on cause 2
-- Block 3 (**Disjoint**): 4 + 4 variables
-    - 3.1: effect on cause 1 only
-    - 3.2: effect on cause 2 only
+<!-- ($j =    1, \ldots,  250$) -->
+<!-- ($j =  251, \ldots,  500$) -->
+<!-- ($j =  501, \ldots, 1000$) -->
+<!-- ($j = 1001, \ldots, 5000$) -->
+
+- Block 1 (**Mutual**): 4 effect variables
+    - same effect on both $\pmb{\beta}^{(1,2)}$ cause-specific hazards
+- Block 2 (**Reversed**): 4 effect variables
+    - positive effect in $\pmb{\beta}^{(1)}$ and negative in $\pmb{\beta}^{(2)}$
+- Block 3 (**Disjoint**): 8 variables
+    - 3.1: 4 effect variables in $\pmb{\beta}^{(1)}$ only
+    - 3.2: 4 effect variables $\pmb{\beta}^{(2)}$ only
+
+## Event and Censoring Times (I)
+
+- Cox-exponential model for events $k = 1,2$
+- $\lambda_{1,2,C}$: Baseline hazards for event times $T_i^{(k)}$, and censoring times $C_i$
+- Simple setting: $\lambda_1 = \lambda_2 = \lambda_C = 0.1$
 
 
 
-## Event and Censoring Times
+\begin{align*}
+T_i^{(k)} &= \frac{-\log(U_i)}{\lambda_k \exp(\mathbf{x}^{T}_i\pmb{\beta}^{(k)})} \\
+C_i       &= \frac{-\log(U_i)}{\lambda_C}
+\end{align*}
 
-- Cox-exponential model for outcome $k = 1,2$
-- Baseline hazards for event times $T_i$ and censoring times $C_i$: $\lambda_k = \lambda_C = 0.1$
-- $U_i \sim \mathcal{U}(0, 1)$
+
+$$U_i \sim \mathcal{U}(0, 1) \Rightarrow -\log(U_i) \sim \mathrm{Exponential}(\lambda = 1)$$
 
 
-$$
-T_i^{(k)} = \frac{-\log(U_i)}{\lambda_k \exp(\mathbf{x}^{T}_i\boldsymbol{\beta}_k)} \quad
-C_i       = \frac{-\log(U_i)}{\lambda_C}
-$$
-\begin{align}
-t_i &= \min(T_i^{(1)}, T_i^{(2)}, C_i) \\[0.5pt]
+## Event and Censoring Times (II)
+
+Assign observed event times $t_i$ and censoring $\delta_i$ indicator accordingly
+
+
+\begin{align*}
+t_i &= \min(T_i^{(1)}, T_i^{(2)}, C_i) & 
 \delta_i &= \begin{cases}
-0 & \text{if}\ t_i = C_i \\
-1 & \text{if}\ t_i = T_i^{(1)} \\
-2 & \text{if}\ t_i = T_i^{(2)} \\
-\end{cases}
-\end{align}
+  0 & \text{if}\ t_i = C_i \\
+  1 & \text{if}\ t_i = T_i^{(1)} \\
+  2 & \text{if}\ t_i = T_i^{(2)} \\
+  \end{cases}
+\end{align*}
 
-## Thanks!
+## Resulting Outcome
 
-Next up: Implementation details nobody will want to see but I but on here any _just in case_ because I don't have too much else to talk about in this regard sorry
+<!-- ### Coefficient vectors -->
+
+- $\pmb{\beta}^{(k)}$ sparse with 12 non-zero entries, $\sum_{i = 1}^p \beta^{(k)}_j = 2$
+
+<!-- ### Hazards -->
+
+- $\exp(\mathbf{x}^{T}_i\pmb{\beta}^{(k)})$ in range of $[10^{-4}, 10^{3}]$
+
+### Event prevalences
+
+Mean event counts and prevalence after 100 replicates with $N = 400$:
+
+\begin{table}
+\centering
+\begin{tabular}{l|l|l}
+\hline
+$\delta$ & $n$ (min - max) & \% (min - max)  \\
+\hline
+0 & 118.0 (97 - 136) & 29.5\% (24.2\% - 34.0\%)\\
+\hline
+1 & 165.1 (142 - 190) & 41.3\% (35.5\% - 47.5\%)\\
+\hline
+2 & 116.9 (93 - 141) & 29.2\% (23.2\% - 35.2\%)\\
+\hline
+\end{tabular}
+\end{table}
+
+
+## Thanks for listening!
+
+## Buffer Slide
+
+Next up: Implementation details nobody will want to see but I put them on here any _just in case_ anyone asks because I don't have too much else to talk about in this regard sorry Mensa anyone?
 
 ## Predictors: Code
 
@@ -184,6 +232,3 @@ Next up: Implementation details nobody will want to see but I but on here any _j
   di <- as.integer(Ti1 <= Ci | Ti2 <= Ci)
   di[which(Ti2 <= Ti1 & Ti2 <= Ci)] <- 2
 ```
-
-
-
